# datakit-gitlab

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
datakit_gitlab/: __init__.py  git.py  gitlab_project.py  project_mixin.py
datakit_gitlab/commands/: integrate.py
datakit_gitlab/commands/issues/: add.py
docs/: Makefile  conf.py  index.rst  make.bat
tests/: conftest.py  test_git.py  test_gitlab_project.py
tests/commands/: test_integrate.py  test_issues_add.py
tests/fixtures/: current_user_get.json  group_id_lookup.json  issue_added_201.json  project_created-201.json  project_get.json  project_search-already_exists.json
