[build-system]
requires = ["uv-build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project]
name = "datakit-gitlab"
version = "0.6.0"
description = "Commands to manage project integration with GitLab."
authors = [
    {name = "Larry Fenn", email = "lfenn@ap.org"},
]
license = {text = "ISC"}
keywords = ["datakit-gitlab"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cliff",
    "datakit-core>=0.2.1",
    "python-gitlab>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/associatedpress/datakit-gitlab"

[project.entry-points."datakit.plugins"]
"gitlab integrate" = "datakit_gitlab:Integrate"
"gitlab issues add" = "datakit_gitlab:issues.Add"

[dependency-groups]
dev = [
    "bumpversion",
    "coverage",
    "ruff",
    "pytest",
    "pytest-mock",
    "responses",
    "Sphinx",
    "tox",
    "tox-uv",
    "watchdog",
]

[tool.uv.build-backend]
module-root = ""

[tool.tox]
env_list = ["py310", "py311", "py312", "py313"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "{posargs}"]]

[tool.ruff]
line-length = 130
exclude = [
    "docs",
    "datakit_gitlab/__init__.py",
    "datakit_gitlab/commands/issues/__init__.py",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
log_level = "INFO"
